test/Harper/Tests/Bad/UsingConstructedMemberTypeAsGeneral.har
value T a = {
    foo :: a -> a;
    foo n = n;
};

main :: String; 
main = {
    (t :: T Integer) = val T {};
    return t.foo "Str";
};