test/Harper/Tests/Bad/UsingConstructedMemberTypeAsGeneral.out
Error: expression `"Str"` has invalid type `String`; expected `Integer`.
During evaluation of:
 t . foo "Str"

Located at line 9 column 12


Execution terminated with an error: type error.